Add farm and worker names to HiveOS configuration
Signed-off-by: Julien Riou <julien@riou.xyz>

--- a/telegraf/hiveos/worker.conf.j2
+++ b/telegraf/hiveos/worker.conf.j2
@@ -9,5 +9,7 @@
   json_query = "gpu_stats"
   [inputs.http.tags]
     farm_id = "{{farm_id}}"
+    farm_name = "{{farm_name}}"
     worker_id = "{{worker_id}}"
+    worker_name = "{{worker_name}}"
 
